# micro-test

./: README.md  docker-compose.yml
flaskapp/: Dockerfile  app.py
haskapi/: Dockerfile  haskapi.cabal  stack.yaml
haskapi/app/: Main.hs  Renderer.hs
haskapi/test/: Spec.hs
haskapi/test/Tests/: Simple.hs
