name:                haskapi
version:             0.1.0.0
homepage:            https://github.com/rumblesan/haskapi#readme
license:             BSD3
author:              Guy John
maintainer:          guy@rumblesan.com
copyright:           2017 Guy John
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskapi
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
                     , app
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  other-modules:       Tests.Simple
  default-language:    Haskell2010
